--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -5,15 +5,17 @@
 {% endblock %}
 
 {% block body %}
-    {% if keyword %}
-        Search results for "{{ keyword }}"
-    {% else %}
-        All Events
-    {% endif %}
+    <div class="events-list">
+        {% if keyword %}
+            <h2>Search results for "{{ keyword }}"</h2>
+        {% else %}
+            <h2>All Events</h2>
+        {% endif %}
 
-    {% for event in events %}
-        {% include 'components/_event_card.html.twig' with { event: event } %}
-    {% else %}
-        <p>No event found.</p>
-    {% endfor %}
+        {% for event in events %}
+            {% include 'components/_event_card.html.twig' with { event: event } %}
+        {% else %}
+            <p>No event found.</p>
+        {% endfor %}
+    </div>
 {% endblock %}
