--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,6 +13,8 @@
 
         <h1>Register</h1>
 
+        <a class="login-with-google-btn submit" href="{{ path('connect_google')}}">Continue with Google</a>
+
         {{ form_start(registrationForm) }}
 
             {{ form_row(registrationForm.email) }}
@@ -22,7 +24,7 @@
             }) }}
             {{ form_row(registrationForm.agreeTerms) }}
 
-            <input type="submit" class="btn" value="Register">
+            <input type="submit" class="submit" value="Register">
         {{ form_end(registrationForm) }}
 
         <p>Already have an account? <a class="link" href="{{ path('app_login') }}">login here</a></p>
