--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -42,10 +42,10 @@
             </div>
             #}
 
-            <input type="submit" value="Connect">
+            <input type="submit" class="submit" value="Connect">
         </form>
 
-        <a class="login-with-google-btn" href="{{ path('connect_google')}}">Se connecter avec Google</a>
+        <a class="login-with-google-btn submit" href="{{ path('connect_google')}}">Se connecter avec Google</a>
 
         <a class="link" href="{{ path('app_register') }}">Create an account</a>
     </div>
