--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -27,6 +27,6 @@
             <input type="submit" class="submit" value="Register">
         {{ form_end(registrationForm) }}
 
-        <p>Already have an account? <a class="link" href="{{ path('app_login') }}">login here</a></p>
+        <p>Already have an account? <a style="text-decoration: underline" href="{{ path('app_login') }}">Sign in here</a></p>
     </div>
 {% endblock %}
