--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -327,7 +327,7 @@ main{
 .form-wrapper{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 2em;
 }
 
@@ -384,6 +384,8 @@ input:focus{
     color: var(--dark);
     font-size: 16px;
     background-color: var(--light);
+    text-align: center;
+    cursor: pointer;
 }
 
 .login-with-google-btn{
